# BREAKOUTS

./: .gitignore  README.md  hello.py  pyproject.toml
configs/: breakout.yaml
docs/: equity_curve.csv  index.html  trades.csv  walkforward_schedule.csv
docs/ecommerce-dashboard/: build_summary.json  category_performance.csv  cohort_retention.csv  index.html
projects/ecommerce_sql_dashboard/: README.md
projects/ecommerce_sql_dashboard/data/: customer_segments.csv  executive_kpis.csv  metric_dictionary.csv  monthly_trends.csv  payment_mix.csv  seller_performance.csv
projects/ecommerce_sql_dashboard/sql/: 01_stage_tables.sql  02_curated_views.sql  10_executive_kpis.sql  11_monthly_trends.sql  12_category_performance.sql  13_payment_mix.sql  14_seller_performance.sql  15_cohort_retention.sql  16_customer_segments.sql
scripts/: run_breakout.py  run_ecommerce_dashboard.py
src/ecommerce_sql_dashboard/: __init__.py  data.py  pipeline.py  report.py
src/quant_research/: __init__.py
src/quant_research/breakout/: __init__.py  backtest.py  config.py  data.py  metrics.py  plots.py  report.py  signals.py  walkforward.py
tests/: test_breakout.py  test_ecommerce_dashboard.py
